--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
   --clr-neutral-100: hsl(0, 0%, 98%);
   --clr-neutral-500: hsl(0, 0%, 41%);
   --clr-neutral-900: hsl(0, 0%, 8%);
+  --clr-neutral-950: hsla(0, 0%, 8%, 0.75);
+
+  --clr-primary-500: hsl(243, 79%, 68%);
+  --clr-primary-550: hsl(243, 79%, 78%);
 
   --ff-base: 'Epilogue', sans-serif;
 
@@ -39,8 +43,8 @@ body {
   5. Improve text rendering
 */
 body {
-  line-height: 1.5;
   -webkit-font-smoothing: antialiased;
+  line-height: 1.5;
 }
 /*
   6. Improve media defaults
@@ -73,4 +77,409 @@ h4,
 h5,
 h6 {
   overflow-wrap: break-word;
+}
+/*
+  9. Remove button styling
+*/
+button {
+  background-color: var(--clr-neutral-100);
+  border: none;
+  cursor: pointer;
+}
+
+/*
+  10. Remove anchor styling
+*/
+a {
+  text-decoration: none;
+}
+
+/*
+  11. Remove list styling
+*/
+ul {
+  list-style: none;
+}
+
+/* ----- Utilities ----- */
+.visually-hidden:not(:focus):not(:active) {
+  border-width: 0;
+  clip: rect(0, 0, 0, 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+
+.wrapper {
+  height: 100vh;
+  margin: 0 auto;
+  max-width: 90rem;
+}
+
+/* ----- General styling ----- */
+body {
+  font-family: var(--ff-base);
+}
+
+footer {
+  text-align: center;
+}
+
+footer a {
+  color: var(--clr-primary-500);
+}
+
+footer a:is(:hover, :focus-visible) {
+  color: var(--clr-primary-550);
+}
+
+/* ----- Header ----- */
+.header {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  padding: 1.5rem 1.125rem;
+}
+
+.header__nav-container {
+  align-items: center;
+  display: flex;
+  flex: 1;
+  justify-content: space-between;
+}
+
+.header__nav-list {
+  display: flex;
+  font-size: 0.875rem;
+  gap: 2.375rem;
+}
+
+.header__nav-list-btn {
+  align-items: center;
+  display: flex;
+  gap: 0.5rem;
+  transition: transform 0.3s ease;
+}
+
+.header__nav-list-btn img {
+  transition: transform 0.2s ease;
+}
+
+.header__nav-list-btn[aria-expanded='true'] > img {
+  transform: rotate(-180deg);
+}
+
+.header__nav-list-btn,
+.header__nav-list-link {
+  color: var(--clr-neutral-500);
+  transition: color 0.3s ease;
+}
+
+.header__nav-list-btn:is(:hover, :focus-visible),
+.header__nav-list-link:is(:hover, :focus-visible) {
+  color: var(--clr-neutral-900);
+}
+
+.user__group {
+  display: flex;
+  gap: 1.5rem;
+}
+
+.user__group-btn {
+  color: var(--clr-neutral-500);
+  font-size: 0.875rem;
+  padding: 0.5rem 1.25rem;
+}
+
+.register__btn {
+  border: 2px solid var(--clr-neutral-500);
+  border-radius: 0.75rem;
+}
+
+.register__btn,
+.login__btn {
+  transition: color 0.3s ease;
+}
+
+.register__btn:is(:hover, :focus-visible) {
+  border: 2px solid var(--clr-neutral-900);
+}
+
+.user__group-btn:is(:hover, :focus-visible),
+.register__btn:is(:hover, :focus-visible) {
+  color: var(--clr-neutral-900);
+}
+
+.btn__container {
+  display: none;
+}
+
+.close__mobile {
+  display: none;
+}
+
+@media (max-width: 51.6875rem) {
+  .header__nav-container {
+    position: absolute;
+    transform: translateX(1000px);
+    transition: transform 0.3s ease;
+  }
+
+  .header__nav-container.mobile__open {
+    align-items: start;
+    background-color: var(--clr-neutral-100);
+    flex-direction: column;
+    gap: 2rem;
+    inset: 0 0 0 35%;
+    justify-content: flex-start;
+    padding: 1.375rem 1.5625rem;
+    transform: translateX(0);
+  }
+
+  .header__nav-list {
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  .header__nav-list-btn,
+  .header__nav-list-link {
+    font-size: 1.0625rem;
+  }
+
+  .user__group {
+    flex-direction: column;
+    gap: 0.5rem;
+    text-align: center;
+    width: 100%;
+  }
+
+  .btn__container {
+    display: flex;
+    justify-content: end;
+    width: 100%;
+  }
+
+  .close__mobile {
+    display: block;
+  }
+}
+
+@media (min-width: 51.75rem) {
+  .header {
+    gap: 4.375rem;
+    padding: 1.5rem 2.5rem;
+  }
+
+  .header__menu {
+    display: none;
+  }
+}
+
+/* ----- Main ----- */
+.main {
+  display: flex;
+  flex-direction: column-reverse;
+  gap: 2.5rem;
+  margin: 0 auto;
+  max-width: 71.5625rem;
+}
+
+.main__content {
+  display: grid;
+  gap: 0.75rem;
+  padding: 0 1rem;
+  text-align: center;
+}
+
+.main__heading {
+  color: var(--clr-neutral-900);
+  font-size: 2.1875rem;
+}
+
+.main__text {
+  color: var(--clr-neutral-500);
+  line-height: 1.6;
+}
+
+.main__primary-btn {
+  background-color: var(--clr-neutral-900);
+  border: 1px solid transparent;
+  border-radius: 0.75rem;
+  color: var(--clr-neutral-100);
+  font-weight: var(--fw-700);
+  margin: 0 auto;
+  margin-top: 0.75rem;
+  padding: 0.75rem 1.5rem;
+  transition: all 0.3s ease;
+  width: fit-content;
+}
+
+.main__primary-btn:is(:hover, :focus-visible) {
+  background-color: var(--clr-neutral-100);
+  border: 1px solid black;
+  color: var(--clr-neutral-900);
+}
+
+.main__illustration {
+  margin: 0 auto;
+}
+
+@media (min-width: 51.75rem) {
+  .main {
+    align-items: center;
+    flex-direction: row;
+    margin-top: 2.5rem;
+  }
+}
+
+@media (min-width: 64rem) {
+  .main {
+    gap: 9rem;
+  }
+
+  .main__content {
+    position: relative;
+    text-align: left;
+  }
+
+  .main__heading {
+    font-size: 4.875rem;
+    line-height: 1;
+  }
+
+  .main__text {
+    font-size: 1.125rem;
+    line-height: 1.6;
+    margin-top: 2.25rem;
+    padding-right: 3rem;
+  }
+
+  .main__primary-btn {
+    font-size: 1.125rem;
+    margin: unset;
+    margin-top: 2.25rem;
+    padding: 1rem 1.75rem;
+  }
+}
+/* --- Clients --- */
+.main__clients {
+  margin-top: 2rem;
+}
+
+.clients {
+  display: flex;
+  gap: 1.75rem;
+}
+
+@media (min-width: 64rem) {
+  .main__clients {
+    bottom: -40%;
+    position: absolute;
+  }
+}
+
+/* ----- Backdrop ----- */
+@media (max-width: 51.6875rem) {
+  .backdrop.backdrop__open {
+    background-color: var(--clr-neutral-950);
+    height: 100vh;
+    position: absolute;
+    width: 100%;
+  }
+}
+
+/* ----- Dropdown ----- */
+.dropdown {
+  display: none;
+  font-size: 1rem;
+  gap: 1rem;
+  padding: 1.5rem;
+  padding-bottom: 0.75rem;
+}
+
+.dropdown a {
+  color: var(--clr-neutral-500);
+  transition: color 0.3s ease;
+}
+
+.dropdown a:is(:hover, :focus-visible) {
+  color: var(--clr-neutral-900);
+}
+
+.dropdown__open {
+  display: grid;
+}
+
+@media (min-width: 826px) {
+  .dropdown {
+    background-color: var(--clr-neutral-100);
+    border-radius: 1rem;
+    box-shadow: 0px 8px 105px -33px rgba(0, 0, 0, 0.75);
+    -webkit-box-shadow: 0px 8px 105px -33px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 0px 8px 105px -33px rgba(0, 0, 0, 0.75);
+    padding: 1.5rem 2rem;
+    position: absolute;
+    width: max-content;
+    z-index: 1;
+  }
+
+  .header__nav-list-item {
+    position: relative;
+  }
+}
+
+/* --- Features --- */
+@media (min-width: 51.625rem) {
+  .features__dropdown {
+    bottom: -13rem;
+    left: -6rem;
+  }
+}
+
+.features__dropdown[data-icon='todo']:before {
+  background: url('./images/icon-todo.svg');
+  content: '';
+  display: inline-flex;
+  height: 1rem;
+  margin-right: 0.5rem;
+  width: 1rem;
+}
+
+.features__dropdown[data-icon='calendar']:before {
+  background: url('./images/icon-calendar.svg');
+  content: '';
+  display: inline-flex;
+  height: 1rem;
+  margin-right: 0.5rem;
+  width: 1rem;
+}
+
+.features__dropdown[data-icon='reminders']:before {
+  background: url('./images/icon-reminders.svg');
+  content: '';
+  display: inline-flex;
+  height: 1rem;
+  margin-right: 0.5rem;
+  width: 1rem;
+}
+
+.features__dropdown[data-icon='planning']:before {
+  background: url('./images/icon-planning.svg');
+  content: '';
+  display: inline-flex;
+  height: 1rem;
+  margin-right: 0.5rem;
+  width: 1rem;
+}
+
+/* --- Company --- */
+@media (min-width: 51.6875rem) {
+  .company__dropdown {
+    bottom: -10.5rem;
+    right: -3rem;
+  }
 }
